--- a/config/apex-tools/default/core.entity_view_display.paragraph.nylon_covers_requirements.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.nylon_covers_requirements.default.yml
@@ -15,7 +15,7 @@ mode: default
 content:
   field_cover_features_para:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -24,7 +24,7 @@ content:
     region: content
   field_cover_features_yes_no:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
