--- a/config/apex-tools/default/core.entity_view_display.paragraph.socket_extension_adapter.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.socket_extension_adapter.default.yml
@@ -20,7 +20,7 @@ mode: default
 content:
   field_broach_opening:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -29,7 +29,7 @@ content:
     region: content
   field_drive_configuration_label:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -38,7 +38,7 @@ content:
     region: content
   field_magnetic_label:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -47,7 +47,7 @@ content:
     region: content
   field_nylon_covers_features:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -56,7 +56,7 @@ content:
     region: content
   field_quotation_order_type_socke:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -65,7 +65,7 @@ content:
     region: content
   field_socket_dimensions_label:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -74,7 +74,7 @@ content:
     region: content
   field_socket_type:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
