--- a/config/apex-tools/default/core.entity_view_display.paragraph.universal_swivel_wrench_para.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.universal_swivel_wrench_para.default.yml
@@ -21,7 +21,7 @@ mode: default
 content:
   field_broach_ref:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -30,7 +30,7 @@ content:
     region: content
   field_dimensions_ref:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -39,7 +39,7 @@ content:
     region: content
   field_female_ref:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -48,7 +48,7 @@ content:
     region: content
   field_female_square_ref_sh:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -57,7 +57,7 @@ content:
     region: content
   field_male_hex_ref:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -66,7 +66,7 @@ content:
     region: content
   field_optional_features_ref:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -75,7 +75,7 @@ content:
     region: content
   field_order:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -84,7 +84,7 @@ content:
     region: content
   field_oth_spec_ref:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
