--- a/config/apex-tools/default/field.field.paragraph.dimensions.field_l_shank_length.yml
+++ b/config/apex-tools/default/field.field.paragraph.dimensions.field_l_shank_length.yml
@@ -11,11 +11,13 @@ id: paragraph.dimensions.field_l_shank_length
 field_name: field_l_shank_length
 entity_type: paragraph
 bundle: dimensions
-label: 'L. Shank length'
+label: 'L. Shank Length or Overall Length'
 description: ''
 required: true
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: '3'
 default_value_callback: ''
 settings: {  }
 field_type: list_string
