--- a/config/apex-tools/default/field.field.paragraph.female_square_drive_short.field_tension_short.yml
+++ b/config/apex-tools/default/field.field.paragraph.female_square_drive_short.field_tension_short.yml
@@ -1,17 +1,17 @@
-uuid: 73328f7f-7ca7-4f4f-a8d1-98b32729bfc0
+uuid: c9d36c28-ab07-49e6-8f7f-18064ee475a3
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_ib
+    - field.storage.paragraph.field_tension_short
     - paragraphs.paragraphs_type.female_square_drive_short
   module:
     - options
-id: paragraph.female_square_drive_short.field_ib
-field_name: field_ib
+id: paragraph.female_square_drive_short.field_tension_short
+field_name: field_tension_short
 entity_type: paragraph
 bundle: female_square_drive_short
-label: 'Iron Band'
+label: Tension
 description: ''
 required: false
 translatable: false
