--- a/config/apex-tools/default/field.field.paragraph.female_square_drive_standard_typ.field_tension_para.yml
+++ b/config/apex-tools/default/field.field.paragraph.female_square_drive_standard_typ.field_tension_para.yml
@@ -1,17 +1,17 @@
-uuid: 9142461c-506c-4f06-8583-6fa4014554a2
+uuid: 778b1fa8-1c6a-4dd1-a818-acbe424ca900
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_iron_brand
+    - field.storage.paragraph.field_tension_para
     - paragraphs.paragraphs_type.female_square_drive_standard_typ
   module:
     - options
-id: paragraph.female_square_drive_standard_typ.field_iron_brand
-field_name: field_iron_brand
+id: paragraph.female_square_drive_standard_typ.field_tension_para
+field_name: field_tension_para
 entity_type: paragraph
 bundle: female_square_drive_standard_typ
-label: 'Iron Band'
+label: Tension
 description: ''
 required: false
 translatable: false
