--- a/config/apex-tools/default/field.field.paragraph.male_hex_drive_standard_type.field_tension_para.yml
+++ b/config/apex-tools/default/field.field.paragraph.male_hex_drive_standard_type.field_tension_para.yml
@@ -1,20 +1,20 @@
-uuid: ecae8aba-a6ac-4e09-ac0c-1b66f812ff49
+uuid: 26a3a73d-d8d2-4d5b-bf6e-4f5294bc45d5
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_iron_brand_uni
+    - field.storage.paragraph.field_tension_para
     - paragraphs.paragraphs_type.male_hex_drive_standard_type
   module:
     - options
-id: paragraph.male_hex_drive_standard_type.field_iron_brand_uni
-field_name: field_iron_brand_uni
+id: paragraph.male_hex_drive_standard_type.field_tension_para
+field_name: field_tension_para
 entity_type: paragraph
 bundle: male_hex_drive_standard_type
-label: 'Iron Band'
+label: Tension
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
