--- a/config/apex-tools/default/field.field.paragraph.quotation_order_type.field_quantity.yml
+++ b/config/apex-tools/default/field.field.paragraph.quotation_order_type.field_quantity.yml
@@ -10,7 +10,7 @@ field_name: field_quantity
 entity_type: paragraph
 bundle: quotation_order_type
 label: Quantity
-description: "\t\t\t\t\t\t\t\t\t\t\t\t<strong>\r\n\t\t\t\t\t\t\t\t\t\t\t\tThere is no min order quantity for first-time Custom orders . However, the minimum order amount needs to be $750 for APEX to develop a new Standard custom solution.\r\n\t\t\t\t\t\t\t\t\t\t\t\t<br><br>\r\n\t\t\t\t\t\t\t\t\t\t\t\tFollow up orders will have the following minimum order quantities:\r\n\t\t\t\t\t\t\t\t\t\t\t\t</strong>\r\n\t\t\t\t\t\t\t\t\t\t\t\t<ul>\r\n\t\t\t\t\t\t\t\t\t\t\t\t<li>12 pieces for Sockets, Wrenches, Bit Holders, and Nutsetters</li>\r\n\t\t\t\t\t\t\t\t\t\t\t\t<li>25 pieces for Bits</li>\r\n\t\t\t\t\t\t\t\t\t\t\t\t</ul>\r\n\r\n\t\t\t\t\t\t\t\t\t\t\t\t<em style=\"display:block;clear:left;\">For any questions or clarification, please contact us at 1-877-298-8240 or <a href=\"mailto:SpecialQuote@apex-tools.com\">SpecialQuote@apex-tools.com</a>.</em>\r\n\t\t\t\t\t\t\t\t\t\t\t"
+description: "<strong>First‐time Custom Order\r\n<ul>\r\n<li>$1000 minimum order value per line item</li>\r\n<li>Minimum order quantities will apply.</li>\r\n<ul><li>12 pieces for Sockets, Wrenches, and Nutsetters</li>\r\n<li>25 pieces for Bits and Bit Holders</li>\r\n</ul>\r\n</ul>\r\nFollow‐up or recurring Custom Order (Must be requoted)\r\n<ul>\r\n<li>Only Minimum order quantities will apply</li>\r\n<ul><li>12 pieces for Sockets, Wrenches, and Nutsetters</li>\r\n<li>25 pieces for Bits and Bit Holders</li>\r\n</ul>\r\n</ul></strong>\r\n<strong>For any questions or clarification, please contact us at 1-877-298-8240 or <a href=\"mailto:SpecialQuote@apex-tools.com\">SpecialQuote@apex-tools.com</a>.</strong>\r\n"
 required: true
 translatable: false
 default_value: {  }
