--- a/config/apex-tools/default/field.storage.paragraph.field_tension_para.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_tension_para.yml
@@ -1,22 +1,22 @@
-uuid: 7fbd801d-7d5f-4475-b028-3c3e69ea736a
+uuid: 0d9fb5c7-dab9-4883-87de-da409b8a21a8
 langcode: en
 status: true
 dependencies:
   module:
     - options
     - paragraphs
-id: paragraph.field_iron_brand_uni
-field_name: field_iron_brand_uni
+id: paragraph.field_tension_para
+field_name: field_tension_para
 entity_type: paragraph
 type: list_string
 settings:
   allowed_values:
     -
-      value: 'yes'
-      label: 'Yes'
+      value: internal
+      label: Internal
     -
-      value: 'no'
-      label: 'No'
+      value: external
+      label: External
   allowed_values_function: ''
 module: options
 locked: false
