--- a/config/apex-tools/default/core.entity_view_display.paragraph.female_square_drive_standard_typ.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.female_square_drive_standard_typ.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.female_square_drive_standard_typ.field_female_square
-    - field.field.paragraph.female_square_drive_standard_typ.field_iron_brand
     - field.field.paragraph.female_square_drive_standard_typ.field_square_drive
+    - field.field.paragraph.female_square_drive_standard_typ.field_tension_para
     - paragraphs.paragraphs_type.female_square_drive_standard_typ
   module:
     - options
@@ -24,19 +24,19 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_iron_brand:
-    type: list_default
-    label: inline
-    settings: {  }
-    third_party_settings: {  }
-    weight: 2
-    region: content
   field_square_drive:
     type: list_default
     label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_tension_para:
+    type: list_default
+    label: inline
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
     region: content
 hidden:
   entity_print_view_epub: true
