--- a/config/apex-tools/default/core.entity_view_display.paragraph.quotation_screwdriver.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.quotation_screwdriver.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_screwdriver:
     type: entity_reference_revisions_entity_view
-    label: inline
+    label: hidden
     settings:
       view_mode: default
       link: ''
