--- a/config/apex-tools/default/field.field.paragraph.optional_features.field_optional_feature.yml
+++ b/config/apex-tools/default/field.field.paragraph.optional_features.field_optional_feature.yml
@@ -11,7 +11,7 @@ id: paragraph.optional_features.field_optional_feature
 field_name: field_optional_feature
 entity_type: paragraph
 bundle: optional_features
-label: 'Optional Features'
+label: 'Cover Features'
 description: ''
 required: false
 translatable: false
