--- a/config/apex-tools/default/field.storage.paragraph.field_tension_short.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_tension_short.yml
@@ -1,22 +1,19 @@
-uuid: 88120fe5-64f8-4e06-861c-0798610de065
+uuid: 3b5ffeaf-68fb-418b-b166-8351bd2b2d52
 langcode: en
 status: true
 dependencies:
   module:
     - options
     - paragraphs
-id: paragraph.field_ib
-field_name: field_ib
+id: paragraph.field_tension_short
+field_name: field_tension_short
 entity_type: paragraph
 type: list_string
 settings:
   allowed_values:
     -
-      value: 'yes'
-      label: 'Yes'
-    -
-      value: 'no'
-      label: 'No'
+      value: internal
+      label: Internal
   allowed_values_function: ''
 module: options
 locked: false
