--- a/config/apex-tools/default/core.entity_view_display.paragraph.optional_features.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.optional_features.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.optional_features.field_optional_feature
+    - field.field.paragraph.optional_features.field_cover_features
     - paragraphs.paragraphs_type.optional_features
   module:
     - options
@@ -12,12 +12,12 @@ targetEntityType: paragraph
 bundle: optional_features
 mode: default
 content:
-  field_optional_feature:
+  field_cover_features:
     type: list_default
     label: inline
     settings: {  }
     third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
 hidden:
   entity_print_view_epub: true
