--- a/config/apex-tools/default/field.field.paragraph.optional_features.field_cover_features.yml
+++ b/config/apex-tools/default/field.field.paragraph.optional_features.field_cover_features.yml
@@ -1,14 +1,14 @@
-uuid: aca80d9a-0d4e-4cfe-af4a-536ff6a1baf9
+uuid: 1d0a9fff-ad4c-4ed2-ab33-d96e96b3a488
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_optional_feature
+    - field.storage.paragraph.field_cover_features
     - paragraphs.paragraphs_type.optional_features
   module:
     - options
-id: paragraph.optional_features.field_optional_feature
-field_name: field_optional_feature
+id: paragraph.optional_features.field_cover_features
+field_name: field_cover_features
 entity_type: paragraph
 bundle: optional_features
 label: 'Cover Features'
