--- a/config/apex-tools/default/field.storage.paragraph.field_cover_features.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_cover_features.yml
@@ -1,12 +1,12 @@
-uuid: 5201c1c8-1df0-428d-b990-22bf3a7cbf4c
+uuid: 298ea321-80e1-4c55-a0b3-28480aa8443b
 langcode: en
 status: true
 dependencies:
   module:
     - options
     - paragraphs
-id: paragraph.field_optional_feature
-field_name: field_optional_feature
+id: paragraph.field_cover_features
+field_name: field_cover_features
 entity_type: paragraph
 type: list_string
 settings:
@@ -26,7 +26,7 @@ settings:
   allowed_values_function: ''
 module: options
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
