Apex-794: Gearwrench custom theme upgrade issue completed.

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -225,7 +225,7 @@ node--full--page:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--jquery-roving-tabindex
 
 node--full--product:
@@ -240,7 +240,7 @@ node--full--product:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--swiper
     - gearwrench/library--jquery-roving-tabindex
 
@@ -254,7 +254,7 @@ node--full--product-category:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--jquery-roving-tabindex
 
 node--full--product-industry:
@@ -331,7 +331,7 @@ paragraph--full--accordion:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--jquery-roving-tabindex
 
 # Content #
@@ -374,7 +374,7 @@ paragraph--full--hero:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--swiper
 
 # Hero Slide #
@@ -388,7 +388,7 @@ paragraph--full--hero-slide:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Featured: Content #
 paragraph--full--featured-content:
@@ -429,7 +429,7 @@ paragraph--full--featured-media:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 paragraph--full--featured-media--layout-full:
   version: 1.x
@@ -477,7 +477,7 @@ paragraph--full--product-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--swiper
 
 # Pull Quote #
@@ -512,7 +512,7 @@ paragraph--full--tabs:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--jquery-roving-tabindex
 
 # Top Message CTA Bar #
@@ -526,7 +526,7 @@ paragraph--full--top-message-cta-bar:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 
 
@@ -550,7 +550,7 @@ region--header:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Footer #
 region--footer-first:
@@ -592,7 +592,7 @@ view--related-products:
     - core/drupal
     - core/jquery
     - gearwrench/library--swiper
-    - core/jquery.once
+    - core/once
 
 view--new-products:
   version: 1.x
@@ -638,7 +638,7 @@ view--social-feed:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--swiper
     - gearwrench/library--add-to-any
 
@@ -653,5 +653,5 @@ webform--warranty-replacement-form:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--jquery-roving-tabindex
