--- a/config/apex-tools/default/field.field.paragraph.cover_features.field_cover_features_radio.yml
+++ b/config/apex-tools/default/field.field.paragraph.cover_features.field_cover_features_radio.yml
@@ -11,7 +11,7 @@ id: paragraph.cover_features.field_cover_features_radio
 field_name: field_cover_features_radio
 entity_type: paragraph
 bundle: cover_features
-label: 'Cover Features radio'
+label: 'Cover Features'
 description: ''
 required: false
 translatable: false
