--- a/config/apex-tools/default/field.field.paragraph.socket_extension_adapter.field_socket_dimensions_label.yml
+++ b/config/apex-tools/default/field.field.paragraph.socket_extension_adapter.field_socket_dimensions_label.yml
@@ -12,7 +12,7 @@ id: paragraph.socket_extension_adapter.field_socket_dimensions_label
 field_name: field_socket_dimensions_label
 entity_type: paragraph
 bundle: socket_extension_adapter
-label: 'Socket Dimensions'
+label: 'Dimensions'
 description: ''
 required: false
 translatable: false
