--- a/config/apex-tools/default/field.storage.paragraph.field_socket_type_allowed.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_socket_type_allowed.yml
@@ -26,6 +26,9 @@ settings:
     -
       value: barbell
       label: 'Barbell<img src=''/sites/apex-tools/files/paragraphs_type_icon/barbell.png''>'
+    -
+      value: socket_extension
+      label: 'Extension<img src=''/sites/apex-tools/files/paragraphs_type_icon/extension_67.png''>'
   allowed_values_function: ''
 module: options
 locked: false
