--- a/config/apex-tools/default/core.entity_view_display.paragraph.drive_configuration_para.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.drive_configuration_para.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.drive_configuration_para.field_drive_configuration
+    - field.field.paragraph.drive_configuration_para.field_driveconf_hex
+    - field.field.paragraph.drive_configuration_para.field_driveconf_other
     - field.field.paragraph.drive_configuration_para.field_hex_gender
     - field.field.paragraph.drive_configuration_para.field_hex_size
     - field.field.paragraph.drive_configuration_para.field_hex_type
@@ -23,19 +25,39 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
+  field_driveconf_hex:
+    type: boolean
+    label: inline
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  field_driveconf_other:
+    type: boolean
+    label: inline
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 5
+    region: content
   field_hex_gender:
     type: list_default
     label: inline
     settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 2
     region: content
   field_hex_size:
     type: list_default
     label: inline
     settings: {  }
     third_party_settings: {  }
-    weight: 2
+    weight: 3
     region: content
   field_hex_type:
     type: string
@@ -43,7 +65,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 3
+    weight: 4
     region: content
   field_other_type:
     type: string
@@ -51,7 +73,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 4
+    weight: 6
     region: content
 hidden:
   entity_print_view_epub: true
