--- a/config/apex-tools/default/field.field.paragraph.s.field_style.yml
+++ b/config/apex-tools/default/field.field.paragraph.s.field_style.yml
@@ -11,7 +11,7 @@ id: paragraph.s.field_style
 field_name: field_style
 entity_type: paragraph
 bundle: s
-label: Style
+label: 'Socket Style'
 description: ''
 required: false
 translatable: false
