--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -64,6 +64,7 @@ permissions:
   - 'create paragraph content quotation_screwdriver'
   - 'create paragraph content quotation_screwdriver_drive_type'
   - 'create paragraph content quotation_screwdriver_style'
+  - 'create paragraph content s'
   - 'create paragraph content screwdriver_bit_holder_styles'
   - 'create paragraph content screwdriver_cover_features'
   - 'create paragraph content screwdriver_cover_requirements'
@@ -126,6 +127,7 @@ permissions:
   - 'update paragraph content quotation_screwdriver'
   - 'update paragraph content quotation_screwdriver_drive_type'
   - 'update paragraph content quotation_screwdriver_style'
+  - 'update paragraph content s'
   - 'update paragraph content screwdriver_bit_holder_styles'
   - 'update paragraph content screwdriver_cover_features'
   - 'update paragraph content screwdriver_cover_requirements'
