--- a/config/apex-tools/default/core.entity_form_display.paragraph.universal_swivel_wrench_para.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.universal_swivel_wrench_para.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.paragraph.universal_swivel_wrench_para.field_optional_features_ref
     - field.field.paragraph.universal_swivel_wrench_para.field_order
     - field.field.paragraph.universal_swivel_wrench_para.field_oth_spec_ref
+    - field.field.paragraph.universal_swivel_wrench_para.field_s
     - paragraphs.paragraphs_type.universal_swivel_wrench_para
   module:
     - paragraphs
@@ -20,24 +21,6 @@ bundle: universal_swivel_wrench_para
 mode: default
 content:
   field_broach_ref:
-    type: paragraphs
-    weight: 4
-    region: content
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      closed_mode: summary
-      autocollapse: none
-      closed_mode_threshold: 0
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-      features:
-        collapse_edit_all: collapse_edit_all
-        duplicate: duplicate
-    third_party_settings: {  }
-  field_dimensions_ref:
     type: paragraphs
     weight: 5
     region: content
@@ -55,9 +38,27 @@ content:
         collapse_edit_all: collapse_edit_all
         duplicate: duplicate
     third_party_settings: {  }
+  field_dimensions_ref:
+    type: paragraphs
+    weight: 4
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
   field_female_ref:
     type: paragraphs
-    weight: 1
+    weight: 0
     region: content
     settings:
       title: Paragraph
@@ -76,7 +77,7 @@ content:
     third_party_settings: {  }
   field_female_square_ref_sh:
     type: paragraphs
-    weight: 3
+    weight: 2
     region: content
     settings:
       title: Paragraph
@@ -94,7 +95,7 @@ content:
     third_party_settings: {  }
   field_male_hex_ref:
     type: paragraphs
-    weight: 2
+    weight: 1
     region: content
     settings:
       title: Paragraph
@@ -149,6 +150,24 @@ content:
   field_oth_spec_ref:
     type: paragraphs
     weight: 6
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
+  field_s:
+    type: paragraphs
+    weight: 3
     region: content
     settings:
       title: Paragraph
