--- a/config/apex-tools/default/core.entity_view_display.paragraph.dimensions.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.dimensions.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.dimensions.field_b_socket_length
-    - field.field.paragraph.dimensions.field_c_socket_diameter
+    - field.field.paragraph.dimensions.field_c_socket_diameter_list
     - field.field.paragraph.dimensions.field_counter_bored_bool
     - field.field.paragraph.dimensions.field_depth_of_clearance
     - field.field.paragraph.dimensions.field_l_shank_length
@@ -25,8 +25,8 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_c_socket_diameter:
-    type: physical_measurement_default
+  field_c_socket_diameter_list:
+    type: list_default
     label: inline
     settings: {  }
     third_party_settings: {  }
@@ -40,7 +40,7 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-    weight: 4
+    weight: 3
     region: content
   field_depth_of_clearance:
     type: physical_measurement_default
@@ -54,14 +54,14 @@ content:
     label: inline
     settings: {  }
     third_party_settings: {  }
-    weight: 5
+    weight: 4
     region: content
   field_nose_dia:
     type: physical_measurement_default
     label: inline
     settings: {  }
     third_party_settings: {  }
-    weight: 7
+    weight: 5
     region: content
 hidden:
   entity_print_view_epub: true
