APEX-792: CSQW BE CHANGES

--- a/config/apex-tools/default/field.field.paragraph.quotation_screwdriver_style.field_screwdriver_style.yml
+++ b/config/apex-tools/default/field.field.paragraph.quotation_screwdriver_style.field_screwdriver_style.yml
@@ -24,7 +24,7 @@ id: paragraph.quotation_screwdriver_style.field_screwdriver_style
 field_name: field_screwdriver_style
 entity_type: paragraph
 bundle: quotation_screwdriver_style
-label: 'Screwdriver Style'
+label: 'SCREWDRIVER BIT STYLE'
 description: ''
 required: false
 translatable: false
@@ -271,6 +271,9 @@ settings:
       quotation_order_type:
         weight: 173
         enabled: false
+      quotation_screwdriver:
+        weight: 182
+        enabled: false
       quotation_screwdriver_drive_type:
         weight: 174
         enabled: false
@@ -286,11 +289,14 @@ settings:
       screwdriver_bit_holder_styles:
         weight: 177
         enabled: false
+      screwdriver_cover_features:
+        weight: 188
+        enabled: false
       screwdriver_cover_requirements:
         weight: 178
         enabled: false
-      screwdriver_style:
-        weight: 185
+      screwdriver_part_type:
+        weight: 190
         enabled: false
       shouldered:
         weight: 139
