--- a/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
@@ -33,14 +33,8 @@ settings:
       value: torx®
       label: 'Torx®<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
     -
-      value: combination
-      label: 'Combination®<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
-    -
-      value: collapsible
-      label: 'Collapsible<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
-    -
       value: 12_point
-      label: '12 Point<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
+      label: '12 Point<img src=''/sites/apex-tools/files/paragraphs_type_icon/DblHex _Sckt_Profile.png''>'
     -
       value: broach_other
       label: Other
