--- a/config/apex-tools/default/paragraphs.paragraphs_type.quotation_screwdriver.yml
+++ b/config/apex-tools/default/paragraphs.paragraphs_type.quotation_screwdriver.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: quotation_screwdriver
-label: 'Quotation Screwdriver'
+label: 'SCREWDRIVER BIT'
 icon_uuid: null
 icon_default: null
 description: ''
