--- a/config/apex-tools/default/paragraphs.paragraphs_type.screwdriver_cover_requirements.yml
+++ b/config/apex-tools/default/paragraphs.paragraphs_type.screwdriver_cover_requirements.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: screwdriver_cover_requirements
-label: 'Screwdriver Cover Requirements'
+label: 'U-GUARD COVER REQUIREMENTS'
 icon_uuid: null
 icon_default: null
 description: ''
