--- a/config/apex-tools/default/paragraphs.paragraphs_type.universal_swivel_wrench_para.yml
+++ b/config/apex-tools/default/paragraphs.paragraphs_type.universal_swivel_wrench_para.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: universal_swivel_wrench_para
-label: 'Universal (Swivel) Wrench'
+label: 'UNIVERSAL WRENCH (SWIVEL)'
 icon_uuid: null
 icon_default: null
 description: ''
