--- a/config/apex-tools/default/field.storage.paragraph.field_bit_holder_retention_metho.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_bit_holder_retention_metho.yml
@@ -20,6 +20,9 @@ settings:
     -
       value: 'Quick Release'
       label: 'Quick Release'
+    -
+      value: magnetic
+      label: Magnetic
   allowed_values_function: ''
 module: options
 locked: false
