--- a/config/apex-tools/default/paragraphs.paragraphs_type.screwdriver_cover_features.yml
+++ b/config/apex-tools/default/paragraphs.paragraphs_type.screwdriver_cover_features.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: screwdriver_cover_features
-label: 'Screwdriver Cover Features'
+label: 'Cover Features'
 icon_uuid: null
 icon_default: null
 description: ''
